--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,18 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
+    implementation 'com.h2database:h2:2.1.214'
+
+    implementation 'mysql:mysql-connector-java:8.0.29'
 }
 
 tasks.named('test') {
